--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . && prettier -c \"**/*.js\" \"**/*.json\" \"**/*.md\"",
-    "fix": "eslint . --fix && prettier --write \"**/*.js\" \"**/*.json\" \"**/*.md\""
+    "lint": "eslint .",
+    "fix": "eslint . --fix"
   },
   "author": {
     "name": "Evgeniy Politiko",
@@ -29,10 +29,10 @@
     "NocoDb API"
   ],
   "license": "MIT",
-  "devDependencies": {
-    "eslint-config-metarhia": "^9.1.1"
-  },
   "dependencies": {
     "mime": "^4.0.6"
+  },
+  "devDependencies": {
+    "neostandard": "^0.12.2"
   }
 }
