--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "mime": "^4.0.6"
+    "mime": "^4.0.6",
+    "p-retry": "^7.1.0"
   },
   "devDependencies": {
     "neostandard": "^0.12.2"
